package modele;

public enum TypeVehicule {
	SIMPLE, PRESTIGE, UTILITAIRE
	
}
